--- a/Lokaverkefni_2019/vefsiða/bifreiðir/bifreidir-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/bifreidir-style.css
@@ -94,6 +94,11 @@
             background:#9f1414;
         }
 
+        .remove_button:hover, .remove_button:active{
+            color: white;
+            background:#333;
+        }
+
     .searchbar{
         width: 100%;
         margin: 1em 0 0 0;
