--- a/MySite/website/index_style.css
+++ b/MySite/website/index_style.css
@@ -13,6 +13,7 @@ body{
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: none; 
     scrollbar-width: none;
+    -webkit-font-smoothing: antialiased;
     }
 
     body::-webkit-scrollbar{
@@ -39,8 +40,21 @@ body{
                 justify-content: center;
                 text-align: center;
                 color: white;
-                font-size: 3.5vw;
+                font-size: 2.5vw;
                 padding: 1em;
+                background-image: -webkit-linear-gradient(92deg,pink, yellow);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                -webkit-animation: hue 2s infinite linear;
+                font-weight:300;
+            }
+
+           
+            
+
+            .navigation ul li:hover, .navigation ul li:active{
+                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+
             }
 
     .main_disc{
