--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
@@ -117,7 +117,7 @@
             font-size: 10pt;
             font-weight: bold; 
             color: white;
-            background:#14489f;
+            background:#d8a120;
 
         }
 
