--- a/Lokaverkefni_2019/vefsiða/index-style.css
+++ b/Lokaverkefni_2019/vefsiða/index-style.css
@@ -21,7 +21,8 @@
         font-size: 30pt;
         font-family: 'Montserrat', sans-serif;
         padding: 1em;
-    }
+        box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
+        }
 
     .add_remove{
         display: flex;
@@ -32,12 +33,22 @@
         .add_remove .add{
             width: 30%;
             margin: 2% 40% 0% 0;
+            box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
+        }
+
+        .add:hover, .add:active{
+            box-shadow: 5px 5px 5px -3px rgba(0,0,0,0.75);
         }
 
         .add_remove .remove{
             padding: 1em 2em;
             width: 30%;
             margin: 2% 0 0% 0%;
+            box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
+        }
+
+        .remove:hover, .remove:active{
+            box-shadow: 5px 5px 5px -3px rgba(0,0,0,0.75);
         }
 
         .dropdown_main{
@@ -72,11 +83,13 @@
             font-weight: bold; 
             color: white;
             background:#14489f;
+            box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
         }
 
         .save_button:hover, .save_button:active{
             color: white;
             background:#333;
+            cursor: pointer;
         }
 
         .dropdown_remove{
@@ -92,29 +105,38 @@
             font-weight: bold; 
             color: white;
             background:#9f1414;
+            box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
         }
 
         .remove_button:hover, .remove_button:active{
             color: white;
             background:#333;
+            cursor: pointer;
         }
 
     .searchbar{
         width: 100%;
         margin: 1em 0 0 0;
+        box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
     }
 
+        .searchbar:hover, .searchbar:active{
+            box-shadow: 5px 5px 5px -3px rgba(0,0,0,0.75);
+        }
+        
         .searchbar input{
             width: 100%;
             font-size: 16pt;
         }
 
     .main{
+        display: flex;
         overflow: scroll;
         -webkit-overflow-scrolling: touch;
         -ms-overflow-style: none; 
         scrollbar-width: none;
         height: 66%;
+        justify-content: center;
     }
 
         .main::-webkit-scrollbar{
@@ -123,7 +145,7 @@
 
         .tool_section{
             display: grid;
-            width: 100%;
+            width: 98%;
             grid-template-columns: repeat(1, 1fr);
             grid-gap: 2em;
             padding: 0;
@@ -135,6 +157,14 @@
                 font-size: 16pt;
                 background: #14489f;
                 color: white;
+                box-shadow: 5px 7px 7px -6px rgba(0,0,0,0.75);
+            }
+
+            .tool_in_list:hover, .tool_in_list:active{
+                color: black;
+                background: #83aeff;
+                cursor: pointer;
+                box-shadow: 5px 5px 5px -3px rgba(0,0,0,0.75);
             }
 
             .tool_in_list_greyed{
@@ -143,6 +173,14 @@
                 font-size: 16pt;
                 background: #cac6c6;
                 color: grey;
+                box-shadow: 5px 7px 7px -6px rgba(0,0,0,0.75);
+            }
+
+            .tool_in_list_greyed:hover, .tool_in_list_greyed:active{
+                color: black;
+                background: #8e8e8e;
+                cursor: pointer;            
+                box-shadow: 5px 5px 5px -3px rgba(0,0,0,0.75);
             }
 
             .tool_section img{
@@ -155,16 +193,6 @@
                 color: black;
             }
 
-            .tool_in_list:hover, .tool_in_list:active{
-                color: black;
-                background: #83aeff;
-            }
-
-            .tool_in_list_greyed:hover, .tool_in_list_greyed:active{
-                color: black;
-                background: #8e8e8e;
-            }
-
     .navigation{
         display: block;
         background:#333;
@@ -174,6 +202,7 @@
         width: 100%;
         margin-right: auto;
         margin-left: auto;
+        box-shadow: 5px 5px 5px -4px rgba(0,0,0,0.75);
     }
 
         .navigation ul{
@@ -198,6 +227,7 @@
         .navigation ul > li:hover, .navigation > li:active{
             color: black;
             background: #BFC0C0;
+            cursor: pointer;
         }
 
     .m_navigation{
@@ -210,6 +240,7 @@
         max-width: 48em;
         margin-right: auto;
         margin-left: auto;
+        box-shadow: 5px 5px 5px -4px rgba(0,0,0,0.75);
     }
 
         .m_navigation ul{
@@ -235,4 +266,5 @@
         .m_navigation ul > li:hover, .m_navigation > li:active{
             color: black;
             background: #BFC0C0;
+            cursor: pointer;
         }
