--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
@@ -11,134 +11,209 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.header{
-    height: 12%;
-    display: flex;
-    background: #14489f;
-    color: white;
-    align-items: center;
-    justify-content: left;
-    font-size: 30pt;
-    padding: 1em;
-}
+    .header{
+        height: 12%;
+        display: flex;
+        background: #14489f;
+        color: white;
+        align-items: center;
+        justify-content: left;
+        font-size: 30pt;
+        padding: 1em;
+    }
 
-.main{
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
-    max-width: 48em;
-    width: 100%;
-    height: 80%;
-}
+    .main{
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: none; 
+        scrollbar-width: none; 
+        max-width: 48em;
+        width: 100%;
+        height: 80%;
+    }
 
-.main::-webkit-scrollbar{
-    display: none;
-}
+        .main::-webkit-scrollbar{
+            display: none;
+        }
 
-.staff_description{
-    display: flex;
-    height: 100%;
-}
+        .staff_description{
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+        }
 
-.staff_description h1{
-    flex-direction: column;
-    width: auto;
-}
+        .description_text{
+            word-wrap: break-word;
+            max-width: 30em;
+            margin-bottom: 1em; 
+            padding:0.5em 0.5em 0.5em 0.1em;
+        }
 
-.staff_logo{
-    width: auto;
-    height: auto;
-    max-height: 50%;
-    float: right;
-}
+            .description_text:hover, .description_text:active{
+                background: #e2e2e2;
+                border:  solid;
+                border-width: 1px;
+                margin: 0;
+            }
 
-.button_history{
-    position: relative;
-    left: 70%;
-    padding: 2em;
-    margin-top: 3em;
-    font-size: 10pt;
-    color: white;
-    background:#14489f;
+            .desc_buttons{
+                display: flex;
+                width: 55%; 
+                margin-top: 1em;
+            }
 
-}
+                .save_text_button{
+                    position: relative;
+                    left: 2.5%;
+                    padding: 1em 2em;
+                    margin-bottom: 1em;
+                    font-size: 10pt;
+                    font-weight: bold; 
+                    color: white;
+                    background: #14489f;
+                    box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
+                    border-radius: 10%;
+                    margin-right: 1em;
+                }
 
-.button_history:hover, .button_history:active{
-    color: black;
-    background:#82b6ff;
+                .remove_button{
+                    position: relative;
+                    left: 2.5%;
+                    padding: 1em 2em;
+                    margin-bottom: 1em;
+                    font-size: 10pt;
+                    font-weight: bold; 
+                    color: white;
+                    background: #9f1414;
+                    box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
+                    border-radius: 10%;
+                }
 
-}
+                .remove_button:hover, .remove_button:active{
+                    color: white;
+                    background:#333;
+                    cursor: pointer;
+                }
 
-.navigation{
-    display: block;
-    background:#333;
-    text-align: center;
-    position: sticky;
-    bottom: 1em;
-    width: 100%;
-    max-width: 48em;
-    margin-right: auto;
-    margin-left: auto;
-}
+        .right_description{
+            display: flex;
+            flex-flow: column;
+            justify-content: space-between;
+        }
+                
+        .logo_section{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
 
-.navigation ul{
-    padding: 0;
-    margin: 0;
-}
+            .staff_logo{
+                max-width: 20em;
+                max-height: 20em;
+                margin: 1em 0.5em ;
+            }
 
-.navigation ul > li{
-    list-style-type: none;
-    display: inline-block;
-    padding: 5px 20px;
-    color: white;
-    font-size: 18px;
-    padding: 1.8em 2em;
-}
+            .update_logo_button{
+                position: relative;
+                margin: 0.5em 0 0.5em 0;
+                max-width: 2em;
+                max-height: 2em;
+                float: right;
+            }
 
-.navigation a{
-    color: inherit;
-    text-decoration: none;
-}
+                .update_logo_button:hover, .update_logo_button:active{
+                    border-radius: 50%;
+                    background: rgb(199, 197, 197);
+                    cursor: pointer;
+                }
 
-.navigation ul > li:hover, .navigation > li:active{
-    color: black;
-    background: #BFC0C0;
-}
+            .photo_upload{
+                display: none;
+                float: right;
+                justify-content: center;
+                align-items: flex-end;
+                flex-direction: column;
+            }
 
-.m_navigation{
-    display: none;
-    background:#333;
-    text-align: center;
-    position: sticky;
-    bottom: 1em;
-    width: 100%;
-    max-width: 48em;
-    margin-right: auto;
-    margin-left: auto;
-}
+                .progress_bar{
+                    justify-content: center;
+                    margin: 2% 25% 0 0;
+                }
 
-.m_navigation ul{
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr)
-}
+                .file_in{
+                    width: 80%; 
+                    padding: 0.5em;
+                }
 
-.m_navigation ul > li{
-    list-style-type: none;
-    color: white;
-    padding: 0.2em;    
-}
+    .navigation{
+        display: block;
+        background:#333;
+        text-align: center;
+        position: sticky;
+        bottom: 1em;
+        width: 100%;
+        max-width: 48em;
+        margin-right: auto;
+        margin-left: auto;
+    }
 
-.m_navigation .icon{
-    text-decoration: none;
-    margin-top: 0.5em;
-    height: 3em;
-    width: 3em;
-}
+    .navigation ul{
+        padding: 0;
+        margin: 0;
+    }
 
-.m_navigation ul > li:hover, .m_navigation > li:active{
-    color: black;
-    background: #BFC0C0;
-}
+    .navigation ul > li{
+        list-style-type: none;
+        display: inline-block;
+        padding: 5px 20px;
+        color: white;
+        font-size: 18px;
+        padding: 1.8em 2em;
+    }
+
+    .navigation a{
+        color: inherit;
+        text-decoration: none;
+    }
+
+    .navigation ul > li:hover, .navigation > li:active{
+        color: black;
+        background: #BFC0C0;
+    }
+
+    .m_navigation{
+        display: none;
+        background:#333;
+        text-align: center;
+        position: sticky;
+        bottom: 1em;
+        width: 100%;
+        max-width: 48em;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .m_navigation ul{
+        padding: 0;
+        margin: 0;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr)
+    }
+
+    .m_navigation ul > li{
+        list-style-type: none;
+        color: white;
+        padding: 0.2em;    
+    }
+
+    .m_navigation .icon{
+        text-decoration: none;
+        margin-top: 0.5em;
+        height: 3em;
+        width: 3em;
+    }
+
+    .m_navigation ul > li:hover, .m_navigation > li:active{
+        color: black;
+        background: #BFC0C0;
+    }
