--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
@@ -101,7 +101,7 @@
         .right_description{
             display: flex;
             flex-flow: column;
-            justify-content: space-between;
+            max-width: 40%;
 
         }
                 
@@ -133,9 +133,8 @@
 
             .photo_upload{
                 display: none;
-                float: right;
                 justify-content: center;
-                align-items: flex-end;
+                align-items: center;
                 flex-direction: column;
             }
                 .progress_bar{
