--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
@@ -36,18 +36,28 @@
 
         .car_description{
             display: flex;
+            flex-direction: row;
             width: 100%;
             justify-content: space-between;
         }
 
-        .car_description h1{
+        .description{
+            display: flex;
             flex-direction: column;
-            width: auto;
+        }
+
+        .description h2{
+            margin:1em 0 0 0;
+        }
+
+        .car_out_of_stock{
+            margin-bottom: 1em;
         }
 
         .description_text{
             word-wrap: break-word;
-            max-width: 30em;
+            max-width: 40vh;
+            margin-top: 2em;
             margin-bottom: 1em; 
             padding:0.5em 0.5em 0.5em 0.1em;
         }
@@ -56,7 +66,6 @@
                 background: #e2e2e2;
                 border:  solid;
                 border-width: 1px;
-                margin: 0;
             }
 
             .desc_buttons{
@@ -102,7 +111,6 @@
             display: flex;
             flex-flow: column;
             max-width: 40%;
-
         }
                 
         .logo_section{
@@ -188,7 +196,6 @@
                 flex-wrap: wrap;
                 align-items: center;
                 width: 70%;
-                padding: 1em 1em 2em 0;
             }
 
             .maintenance_info >*{
