--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default-style.css
@@ -122,9 +122,10 @@
         }
 
             .tool_logo{
-                max-width: 15em;
-                max-height: 15em;
-                margin: 1em 0.5em ;
+                width: auto ;
+                max-width: 100% ;
+                height: auto ;
+                margin: 1em 0 0.5em 0;
             }
 
             .update_logo_button{
@@ -163,7 +164,7 @@
             float: right;
             width: 60%; 
             padding: 2em;
-            margin-top: 0.5em;
+            margin: 0.5em 0 1em 0;
             font-size: 10pt;
             font-weight: bold;
             color: white;
