--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
@@ -38,7 +38,7 @@
             display: flex;
             flex-direction: row;
             width: 100%;
-            justify-content: space-between;
+            justify-content: center;
         }
 
         .description{
@@ -193,7 +193,7 @@
 
             .maintenance_info{
                 display: flex;
-                flex-wrap: wrap;
+                flex-flow: row wrap;
                 align-items: center;
                 width: 70%;
             }
